# magos

./: .gitignore  CMakeLists.txt  README.md  doxygen.cfg
helpers/: common.h  roulette.h
include/: builder.h  canvas.h  hash.h  magos.h  maze.h  render.h  solver.h  wallf.h
run/: driver_maze
src/: builder.cpp  canvas.cpp  magos.cpp  maze.cpp  render.cpp  solver.cpp  wallf.cpp
test/: driver_builder.cpp  driver_canvas.cpp  driver_hash.cpp  driver_magos.cpp  driver_maze.cpp  driver_render.cpp  driver_roullete.cpp  driver_solver.cpp  driver_wallf.cpp
